<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <EditTextPreference android:key="device"
        android:selectable="false"
        android:title="@string/device"
        />
    
    <EditTextPreference android:key="version"
        android:selectable="false"
        android:title="@string/version"
        />

    <PreferenceCategory android:title="@string/platform_keystore_title" >
        <CheckBoxPreference
            android:key="keystore-supported"
            android:selectable="false"
            android:title="@string/platform_keystore_supported" />

        <EditTextPreference
            android:key="keystore-keytypes"
            android:selectable="false"
            android:summary="(none)"
            android:title="@string/platform_keystore_supported_types" />

        <CheckBoxPreference
            android:key="keystore-hw"
            android:selectable="false"
            android:title="@string/platform_keystore_hardware" />

        <EditTextPreference
            android:key="keystore-hw-keytypes"
            android:selectable="false"
            android:summary="(none)"
            android:title="@string/platform_keystore_hardware_types" />
    </PreferenceCategory>

</PreferenceScreen>